--- a/app/app.component.html
+++ b/app/app.component.html
@@ -21,11 +21,11 @@
     </ScrollView>
     <StackLayout row="0" col="1"  height="210">
         <GridLayout>
-            <RadCartesianChart tkExampleTitle tkToggleNavButton>
+            <RadCartesianChart tkExampleTitle tkToggleNavButton pointSelectionMode="Single" (pointSelected)="onSeriesSelected($event)">
                 <CategoricalAxis tkCartesianHorizontalAxis></CategoricalAxis>
                 <LinearAxis tkCartesianVerticalAxis></LinearAxis>
 
-                <BarSeries tkCartesianSeries [items]="chartResult" selectionMode="DataPoint" categoryProperty="hour" valueProperty="value" showLabels="true" >
+                <BarSeries tkCartesianSeries [items]="chartResult" selectionMode="DataPoint" categoryProperty="hour" valueProperty="value" showLabels="{{label}}" >
                     <PointLabelStyle tkBarLabelStyle margin="10" fontStyle="Bold" fillColor="#60B3FC" textSize="10" textColor="White"></PointLabelStyle>
                 </BarSeries>
             </RadCartesianChart>
