--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,28 +2,12 @@
     <NavigationButton text="Voltar" android:icon="res://ic_arrow_back" (tap)="back()"></NavigationButton>
 </ActionBar>
 
-<GridLayout rows="*,60">
-    <ScrollView row="0">
-        <GridLayout rows="*, *, *" columns="*,*,*" >
-            <StackLayout row="0" colSpan="3" orientation="horizontal" width="100%">
-                <AnimatedCircle backgroundColor="transparent" width="200" height="200" animated="true" animateFrom="0" animationDuration="1000"
-                                rimColor="#8F3A6B" text="{{progress}}%" barColor="#327af3" fillColor="#f6f6f6" clockwise="true" rimWidth="{{ isIOs ? 25 : 50 }}"
-                                progress="{{progress}}" marginTop="40" marginBottom="50" textSize="28">
-                </AnimatedCircle>
-            </StackLayout>
-            <Label class="af-item" row="1" col="0" text="1000" textWrap="true"></Label>
-            <Label class="af-item" row="1" col="1" text="90" textWrap="true"></Label>
-            <Label class="af-item" row="1" col="2" text="80" textWrap="true"></Label>
-            <Label class="af-item-text" row="2" col="0" text="Passos" textWrap="true"></Label>
-            <Label class="af-item-text" row="2" col="1" text="Cal" textWrap="true"></Label>
-            <Label class="af-item-text" row="2" col="2" text="Km" textWrap="true"></Label>
-        </GridLayout>
-    </ScrollView>
+<GridLayout rows="*,*">
     <StackLayout row="0" col="1"  height="210">
         <GridLayout>
             <RadCartesianChart tkExampleTitle tkToggleNavButton pointSelectionMode="Single" (pointSelected)="onPointSelected($event)" (pointDeselected)="onPointDeselected($event)">
-                <CategoricalAxis tkCartesianHorizontalAxis></CategoricalAxis>
-                <LinearAxis *ngIf="!isIOs" tkCartesianVerticalAxis labelFormat="%.0f" ></LinearAxis>
+                <CategoricalAxis tkCartesianHorizontalAxis allowPan="true" allowZoom="true"></CategoricalAxis>
+                <LinearAxis *ngIf="!isIOs" tkCartesianVerticalAxis labelFormat="%.0f" allowPan="true"></LinearAxis>
                 <Trackball tkCartesianTrackball></Trackball>
 
                 <BarSeries tkCartesianSeries [items]="chartResult" selectionMode="DataPoint" categoryProperty="hour" valueProperty="value" [showLabels]="showLabelProperty" >
@@ -32,11 +16,27 @@
             </RadCartesianChart>
         </GridLayout>
     </StackLayout>
-    <StackLayout row="1" orientation="horizontal">
-        <GridLayout rows="*" columns="*,*,*">
-            <Button col="0" text="Dia" [ngClass]="{'active-af': activeDia}" class="btn btn-af" (tap)="getInformations(card.data, 0)"></Button>
-            <Button col="1" text="Semana" [ngClass]="{'active-af': activeSemana}" class="btn btn-af" (tap)="getInformations(card.data, 1)"></Button>
-            <Button col="2" text="Mês" [ngClass]="{'active-af': activeMes}" class="btn btn-af" (tap)="getInformations(card.data, 2)"></Button>
+    <StackLayout row="1" col="1"  height="210">
+        <GridLayout>
+            <RadCartesianChart tkExampleTitle tkToggleNavButton>
+                <CategoricalAxis tkCartesianHorizontalAxis allowPan="true" allowZoom="true"></CategoricalAxis>
+                <LinearAxis *ngIf="!isIOs" tkCartesianVerticalAxis labelFormat="%.0f" allowPan="true"></LinearAxis>
+                <Trackball tkCartesianTrackball></Trackball>
+
+                <BarSeries tkCartesianSeries [items]="chartResult" selectionMode="DataPoint" categoryProperty="hour" valueProperty="value" [showLabels]="showLabelProperty" >
+                    <PointLabelStyle tkBarLabelStyle margin="10" fontStyle="Bold" fillColor="#60B3FC" textSize="10" textColor="White"></PointLabelStyle>
+                </BarSeries>
+            </RadCartesianChart>
+
+            <RadCartesianChart tkExampleTitle tkToggleNavButton>
+                <CategoricalAxis tkCartesianHorizontalAxis allowPan="true" allowZoom="true" verticalLocation="Bottom" labelSize="11"></CategoricalAxis>
+                <LinearAxis *ngIf="!isIOs" tkCartesianVerticalAxis labelFormat="%.0f" allowPan="true" horizontalLocation="Left" labelSize="11"></LinearAxis>
+                <Trackball tkCartesianTrackball></Trackball>
+
+                <BarSeries tkCartesianSeries [items]="outubro" [stackMode]="stackMode"  categoryProperty="Country" valueProperty="Amount"></BarSeries>
+                <BarSeries tkCartesianSeries [items]="novembro" [stackMode]="stackMode" categoryProperty="Country" valueProperty="Amount"></BarSeries>
+                <BarSeries tkCartesianSeries [items]="dezembro" [stackMode]="stackMode" categoryProperty="Country" valueProperty="Amount"></BarSeries>
+            </RadCartesianChart>
         </GridLayout>
     </StackLayout>
 </GridLayout>
