--- a/app/chart-series-bar.component.html
+++ b/app/chart-series-bar.component.html
@@ -1,45 +1,16 @@
 <StackLayout>
+    <GridLayout row="*, *">
+        <StackLayout row="0">
+            <RadCartesianChart tkExampleTitle tkToggleNavButton>
+                <CategoricalAxis tkCartesianHorizontalAxis allowPan="true" allowZoom="true"></CategoricalAxis>
+                <LinearAxis tkCartesianVerticalAxis allowPan="true" ></LinearAxis>
 
-    <TextField hint="Email Address" keyboardType="email"
-               autocorrect="false" autocapitalizationType="none"></TextField>
-    <TextField hint="Password" secure="true"></TextField>
+                <BarSeries tkCartesianSeries [items]="chartResult" categoryProperty="hour" valueProperty="value" showLabels="true" >
+                    <PointLabelStyle tkBarLabelStyle margin="10" fontStyle="Bold" fillColor="#60B3FC" textSize="10" textColor="White"></PointLabelStyle>
+                </BarSeries>
+            </RadCartesianChart>
+        </StackLayout>
 
-    <Button text="Sign in"></Button>
-    <Button text="Sign up for Groceries GST"></Button>
-
-    <TextField hint="Email Address" keyboardType="email"
-               autocorrect="false" autocapitalizationType="none"></TextField>
-    <TextField hint="Password" secure="true"></TextField>
-
-    <Button text="Sign in"></Button>
-    <Button text="Sign up for Groceries GST"></Button>
-
-    <TextField hint="Email Address" keyboardType="email"
-               autocorrect="false" autocapitalizationType="none"></TextField>
-    <TextField hint="Password" secure="true"></TextField>
-
-    <Button text="Sign in"></Button>
-    <Button text="Sign up for Groceries GST"></Button>
-
-    <TextField hint="Email Address" keyboardType="email"
-               autocorrect="false" autocapitalizationType="none"></TextField>
-    <TextField hint="Password" secure="true"></TextField>
-
-    <Button text="Sign in"></Button>
-    <Button text="Sign up for Groceries GST"></Button>
-    <Button text="Sign up for Groceries GST"></Button>
-    <Button text="Sign up for Groceries GST"></Button>
-    <Button text="Sign up for Groceries GST"></Button>
-
-    <GridLayout>
-        <RadCartesianChart tkExampleTitle tkToggleNavButton>
-            <CategoricalAxis tkCartesianHorizontalAxis></CategoricalAxis>
-            <LinearAxis tkCartesianVerticalAxis></LinearAxis>
-
-            <BarSeries tkCartesianSeries [items]="chartResult" categoryProperty="hour" valueProperty="value" showLabels="true" >
-                <PointLabelStyle tkBarLabelStyle margin="10" fontStyle="Bold" fillColor="#60B3FC" textSize="10" textColor="White"></PointLabelStyle>
-            </BarSeries>
-        </RadCartesianChart>
     </GridLayout>
 </StackLayout>
 
