--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,17 +3,16 @@
 </ActionBar>
 
 <GridLayout rows="*">
-    <StackLayout row="0" col="1"  height="210">
-        <GridLayout>
-            <RadCartesianChart tkExampleTitle tkToggleNavButton [horizontalZoom]="2" >
-                <CategoricalAxis tkCartesianHorizontalAxis allowPan="true" allowZoom="true"></CategoricalAxis>
-                <LinearAxis *ngIf="!isIOs" tkCartesianVerticalAxis labelFormat="%.0f" allowPan="true"></LinearAxis>
-                <Trackball tkCartesianTrackball></Trackball>
+      <RadCartesianChart tkExampleTitle tkToggleNavButton>
+        <LinearAxis tkCartesianHorizontalAxis></LinearAxis>
+        <LinearAxis tkCartesianVerticalAxis></LinearAxis>
 
-                <BarSeries tkCartesianSeries [items]="outubro" selectionMode="stackMode" categoryProperty="Country" valueProperty="Amount" [showLabels]="showLabelProperty" >
-                    <PointLabelStyle tkBarLabelStyle margin="10" fontStyle="Bold" fillColor="#60B3FC" textSize="10" textColor="White"></PointLabelStyle>
-                </BarSeries>
-            </RadCartesianChart>
-        </GridLayout>
-    </StackLayout>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc0"></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc1"></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc2"></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc3"></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc4"></ScatterSeries>
+
+    </RadCartesianChart>
+
 </GridLayout>
