--- a/app/app.component.html
+++ b/app/app.component.html
@@ -4,28 +4,28 @@
 
 <GridLayout rows="*">
 
-    <RadCartesianChart tkExampleTitle tkToggleNavButton (chartZoomed)="teste($event)">
-        <LinearAxis tkCartesianHorizontalAxis allowPan="true" allowZoom="true"></LinearAxis>
+    <RadCartesianChart tkExampleTitle tkToggleNavButton>
+        <LinearAxis tkCartesianHorizontalAxis></LinearAxis>
         <Trackball tkCartesianTrackball></Trackball>
 
-
-        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="Age" yProperty="Salary"></ScatterSeries>
-        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="Age" yProperty="Spendings"></ScatterSeries>
-        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="Age" yProperty="Savings"></ScatterSeries>
-
         <!--
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc0" ></ScatterSeries>
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc1" ></ScatterSeries>
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc2" ></ScatterSeries>
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc3" ></ScatterSeries>
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc4" ></ScatterSeries>
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc5" ></ScatterSeries>
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc6" ></ScatterSeries>
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc7" ></ScatterSeries>
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc8" ></ScatterSeries>
-            <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="imc9" ></ScatterSeries>
+               <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="Age" yProperty="Salary"></ScatterSeries>
+               <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="Age" yProperty="Spendings"></ScatterSeries>
+               <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="Age" yProperty="Savings"></ScatterSeries>
+       -->
 
-        -->
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val0" ></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val1" ></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val2" ></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val3" ></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val4" ></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val5" ></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val6" ></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val7" ></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val8" ></ScatterSeries>
+        <ScatterSeries tkCartesianSeries [items]="scatter" xProperty="dia" yProperty="val9" ></ScatterSeries>
+
+
     </RadCartesianChart>
 
 </GridLayout>
