Desenvolvimento do novo grafico.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -5,6 +5,7 @@
 <GridLayout rows="*">
 
     <RadCartesianChart tkExampleTitle tkToggleNavButton>
+        <!--<LinearAxis tkCartesianHorizontalAxis labelFormat="%.0f"></LinearAxis>-->
         <LinearAxis tkCartesianHorizontalAxis></LinearAxis>
         <Trackball tkCartesianTrackball></Trackball>
 
